pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotFindMapKey.pkl
local x = Map("xfoo", "xfoo", "foyo", "foyo", "fooz", "fooz", "other", "other")

res1 = x["foo"]